k8s/scheduler.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
#  ------------------------------------------------------------

###################################################################################################
# Scheduler service
###################################################################################################
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: scheduler
  labels:
    app: scheduler 
    bc: shipping
spec:
  serviceName: scheduler
  replicas: 32
  selector:
    matchLabels:
      app: scheduler 
  template:
    metadata:
      labels:
        app: scheduler 
        version: 0.1.0
        bc: shipping
    spec:
      containers:
      - image:
        name: scheduler
        imagePullPolicy: IfNotPresent
