k8s/account.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
#  ------------------------------------------------------------

###################################################################################################
# Account service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: account
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: account
    version: 0.1.0
    bc: shipping
spec:
  replicas: 1
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: account         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: account
        version: 0.1.0
        bc: shipping
      annotations:
        team: accountservice
    spec:
      containers:
      - name: account
        image: 
        ports:
        - name: service
          containerPort: 80
