k8s/dronedelivery.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
#  ------------------------------------------------------------

###################################################################################################
# Account service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: account
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: account
    version: 0.1.0
    release: stable
    tier: backend
    bc: shipping
spec:
  replicas: 1
  revisionHistoryLimit: 14 # 14 rollouts are allowed. Its value depends on the frequency and stability of  Deployments.
  strategy:
    type: RollingUpdate    
    rollingUpdate:
       maxSurge: 1         # slow roll-update: we deploy one pod at a time 
       maxUnavailable: 0   # 0 desired replicas can be unavailable
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: account         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: account
        bc: shipping
        version: 0.1.0
        tier: backend
      annotations:
        commit: 
        team: accountservice
        imagecreationdate:
    spec:
      containers:
      - name: account
        image: dronedelivery.azurecr.io/mockaccountservice:0.1.0
        ports:
        - name: service
          containerPort: 80
---
###################################################################################################
# Delivery service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: delivery
  labels:
    app: delivery
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: delivery
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: delivery
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: delivery
    version: 0.1.0
    release: stable
    tier: backend
    bc: shipping
spec:
  replicas: 1
  revisionHistoryLimit: 14 # 14 rollouts are allowed. Its value depends on the frequency and stability of  Deployments.
  strategy:
    type: RollingUpdate    
    rollingUpdate:
       maxSurge: 1         # slow roll-update: we deploy one pod at a time 
       maxUnavailable: 0   # 0 desired replicas can be unavailable
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: delivery         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: delivery
        bc: shipping
        version: 0.1.0
        tier: backend
      annotations:
        commit: 
        team: deliveryservice
        imagecreationdate:
    spec:
      containers:
      - name: delivery
        image: dronedelivery.azurecr.io/fabrikam.dronedelivery.deliveryservice:0.1.0
        ports:
        - name: service
          containerPort: 80
---
###################################################################################################
# Mock Delivery Scheduler service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: deliveryscheduler
  labels:
    app: deliveryscheduler
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: deliveryscheduler
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deliveryscheduler
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: deliveryscheduler
    version: 0.1.0
    release: stable
    tier: backend
    bc: shipping
spec:
  replicas: 1
  revisionHistoryLimit: 14 # 14 rollouts are allowed. Its value depends on the frequency and stability of  Deployments.
  strategy:
    type: RollingUpdate    
    rollingUpdate:
       maxSurge: 1         # slow roll-update: we deploy one pod at a time 
       maxUnavailable: 0   # 0 desired replicas can be unavailable
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: deliveryscheduler         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: deliveryscheduler
        bc: shipping
        version: 0.1.0
        tier: backend
      annotations:
        commit: 
        team: deliveryschedulerservice
        imagecreationdate:
    spec:
      containers:
      - name: deliveryscheduler
        image: dronedelivery.azurecr.io/mockdeliveryscheduler:0.1.0
        ports:
        - name: service
          containerPort: 80
---
###################################################################################################
# Ingestion service
###################################################################################################
# <TBC>
---
###################################################################################################
# Delivery Scheduler service
###################################################################################################
# <TBC>
---
###################################################################################################
# Drone service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: dronescheduler
  labels:
    app: dronescheduler
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: dronescheduler
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dronescheduler
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: dronescheduler
    version: 0.1.0
    release: stable
    tier: backend
    bc: shipping
spec:
  replicas: 1
  revisionHistoryLimit: 14 # 14 rollouts are allowed. Its value depends on the frequency and stability of  Deployments.
  strategy:
    type: RollingUpdate    
    rollingUpdate:
       maxSurge: 1         # slow roll-update: we deploy one pod at a time 
       maxUnavailable: 0   # 0 desired replicas can be unavailable
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: dronescheduler         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: dronescheduler
        bc: shipping
        version: 0.1.0
        tier: backend
      annotations:
        commit: 
        team: droneschedulerservice
        imagecreationdate:
    spec:
      containers:
      - name: dronescheduler
        image: dronedelivery.azurecr.io/mockdronescheduler:0.1.0
        ports:
        - name: service
          containerPort: 80
---
###################################################################################################
# Package service
###################################################################################################
# <TBC>
---
###################################################################################################
# ThirdParty service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: thirdparty
  labels:
    app: thirdparty
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: thirdparty
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: thirdparty
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: thirdparty
    version: 0.1.0
    release: stable
    tier: backend
    bc: shipping
spec:
  replicas: 1
  revisionHistoryLimit: 14 # 14 rollouts are allowed. Its value depends on the frequency and stability of  Deployments.
  strategy:
    type: RollingUpdate    
    rollingUpdate:
       maxSurge: 1         # slow roll-update: we deploy one pod at a time 
       maxUnavailable: 0   # 0 desired replicas can be unavailable
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: thirdparty         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: thirdparty
        bc: shipping
        version: 0.1.0
        tier: backend
      annotations:
        commit: 
        team: thirdpartyservice
        imagecreationdate:
    spec:
      containers:
      - name: thirdparty
        image: dronedelivery.azurecr.io/mockthirdpartyservice:0.1.0
        ports:
        - name: service
          containerPort: 80
