k8s/ingestion-rest-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  labels:
    app: ingestion
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ingestion
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingestion
spec:
  replicas: 10
  template:
    metadata:
      labels:
        app: ingestion
        version: v1
    spec:
      containers:
      - name: ingestion
        image: image
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/probe
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
      imagePullSecrets:
        - name: dockersecret
