k8s/ingestion.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
#  ------------------------------------------------------------

##################################################################################################
# Ingestion service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  labels:
    app: ingestion
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: ingestion
  clusterIP: None 
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingestion
  labels:
    app: ingestion 
    version: 0.1.0
    bc: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion 
  template:
    metadata:
      labels:
        app: ingestion
        version: 0.1.0
        bc: shipping
    spec:
      containers:
      - name: ingestion
        image:
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/probe
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
