k8s/mockdeliveryscheduler.yaml
#  ------------------------------------------------------------
#   Copyright (c) Microsoft Corporation.  All rights reserved.
#   Licensed under the MIT License (MIT). See License.txt in the repo root for license information.
#  ------------------------------------------------------------

###################################################################################################
# Mock Delivery Scheduler service
###################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: deliveryscheduler
  labels:
    app: deliveryscheduler
    bc: shipping
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: deliveryscheduler
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deliveryscheduler
  labels:                 # In API version apps/v1beta2, .metadata.labels no longer default to .spec.template.metadata.labels. 
    app: deliveryscheduler
    version: 0.1.0
    bc: shipping
spec:
  replicas: 1
  selector:                # In API version apps/v1beta2, .spec.selector no longer default to .spec.template.metadata.labels. 
    matchLabels:           # spec.selector is immutable after creation of the Deployment in apps/v1beta2.
      app: deliveryscheduler         
  template:                # A Deployment may terminate Pods whose labels match the selector if their template is different from .spec.template
    metadata:
      labels:
        app: deliveryscheduler
        version: 0.1.0
        bc: shipping
      annotations:
        commit: 
        team: deliveryschedulerservice
        imagecreationdate:
    spec:
      containers:
      - name: deliveryscheduler
        image: dronedelivery.azurecr.io/mockdeliveryscheduler:0.1.0
        ports:
        - name: service
          containerPort: 80
        resources:
           requests:
             cpu: 1
             memory: 1G
           limits:
             cpu: 1
             memory: 1G
