k8s/scheduler.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: scheduler
spec:
  serviceName: schedulerservice
  replicas: 5
  template:
    metadata:
      labels:
        app: schedulerservice
        run: schedulerservice
    spec:
      containers:
      - image: index.docker.io/kirpasingh/poltergeist:akka-scheduler84
        name: schedulerservice
        imagePullPolicy: Always
      imagePullSecrets:
        - name: poltergeistkey
---
apiVersion: v1
kind: Service
metadata:
  name: schedulerservice
spec:
  selector:
    app: schedulerservice
  ports:
    - port: 80
  type: NodePort
